things are hidden until Go button is pressed

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "vat",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,5 +11,15 @@
   "dependencies": {
     "bootstrap": "^4.6.0",
     "jquery": "^3.6.0"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/A-AronT/VAT.git"
+  },
+  "bugs": {
+    "url": "https://github.com/A-AronT/VAT/issues"
+  },
+  "homepage": "https://github.com/A-AronT/VAT#readme",
+  "description": ""
 }
